# taskflow-cpp-template

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.claude/: CLAUDE.md
app/: main.cpp
cmake/: Coverage.cmake
context/: README.md
context/project/: .gitkeep  claude-code-tdd-primer-plan.md  taskflow-unit-test-primer.md
context/standards/: cmake-best-practices.md  cpp-tdd.md  taskflow-reference.md  taskflow-testing-patterns.md
include/mylib/: mylib.hpp
src/: CMakeLists.txt  mylib.cpp
tests/: test_mylib.cpp
